tests/errors/undefined-knot.ink
// RUN: %ink-compiler --stdin --compile-only --dump-ast < %s | FileCheck %s

-> nowhere

== someplace
